# shakespeare_analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
data/plays/: romeo_juliet.txt
scripts/: run_play.py
src/shakespeare_geo/: aggregate.py  config.py  extract.py  filtering.py  geocode.py  gutenberg.py  map.py  parser.py
tests/: test_aggregate.py  test_filtering.py  test_geocode.py  test_gutenberg.py  test_parser.py  test_run_play_integration.py
